updated to work with gradle 9.5 and java 25